[gd_scene load_steps=10 format=3 uid="uid://dkby6elhge60j"]

[ext_resource type="Script" uid="uid://sxvmei4od6uq" path="res://scripts/settings.gd" id="1_f4mfi"]
[ext_resource type="PackedScene" uid="uid://dmyn5oj2bitw8" path="res://scenes/background_scene.tscn" id="2_f4mfi"]
[ext_resource type="FontFile" uid="uid://k35kwvcbwer" path="res://assets/UI/High Speed.ttf" id="3_es4n0"]
[ext_resource type="PackedScene" uid="uid://ctpfy1wfhqeim" path="res://scenes/audio_slider.tscn" id="4_es4n0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6e1uj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jc7ji"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87vmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g44xs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vj8vg"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_f4mfi")

[node name="Background" type="Node3D" parent="."]

[node name="Background Scene" parent="Background" instance=ExtResource("2_f4mfi")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 160.8, 23.3823, 10.2074)
fov = 90.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 240
theme_override_constants/margin_right = 1300
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="master" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.843137, 0.776471, 0.145098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "Master Volume"

[node name="MasterVolume" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("4_es4n0")]
layout_mode = 2
busName = "Master"

[node name="sfx" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.843137, 0.776471, 0.145098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "


Sound Effects Volume"

[node name="SFXVolume" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("4_es4n0")]
layout_mode = 2
busName = "Music"

[node name="music" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.843137, 0.776471, 0.145098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "


Music Volume"

[node name="MusicVolume" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("4_es4n0")]
layout_mode = 2
busName = "SFX"

[node name="BackButton" type="Button" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_hover_pressed_color = Color(0.843137, 0.776471, 0.145098, 1)
theme_override_colors/font_hover_color = Color(0.843137, 0.552941, 0.145098, 1)
theme_override_colors/font_color = Color(0.916159, 0.417271, 0.742034, 1)
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_6e1uj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jc7ji")
theme_override_styles/hover = SubResource("StyleBoxEmpty_87vmq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_g44xs")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vj8vg")
text = "Back to menu
"

[connection signal="pressed" from="Control/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
